# mta-discord-bot

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
[resources]/[dev bot]/SampleBot/: bot.lua  meta.xml
bot/: CMakeLists.txt
bot/module/: Bot.cpp  Bot.h  BotSession.cpp  BotSession.h  Main.cpp
